--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 configuration
 use of argparse
+rework of prepare_file
+allow Tabs and Spaces in Indentation to switch places
 
 header_register_callback
 
