--- a/TODO
+++ b/TODO
@@ -16,3 +16,8 @@ session_gc
 session_encode
 session_decode
 $_SESSION
+
+add handler for memcached (if not already submitted)
+add handler for redis (if not already submitted)
+
+wait for suggestions
