--- a/debian/changelog
+++ b/debian/changelog
@@ -3,4 +3,4 @@ pyhp (1.2-0) unstable; urgency=low
   * third release
   * add support for ~ as home directory in cache_path
   
- -- Eric Wolf <robo-eric@gmx.de>  Di, 13 Aug 2019 18:07:00 +0100
+ -- Eric Wolf <robo-eric@gmx.de>  Tue, 13 Aug 2019 18:07:00 +0100
