--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ pyhp (1.3-1) stable; urgency=low
   * add more customizable Request handling
   * add --config argument
   * rework register_shutdown_function to use atexit
+  * fix crash of files_mtime.py if os not in namespace
 
  -- Eric Wolf <robo-eric@gmx.de>  Sat, 14 Sep 2019 19:39:00 +0100
 
