--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@ session_set_save_handler
 session_status
 session_gc
 $_SESSION
+make Thread Safe
 
 add handler for memcached (if not already submitted)
 add handler for redis (if not already submitted)
