--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ python3-pyhp-core (3.1-1) stable; urgency=low
   * add script to clear the cache on debian uninstall
   * add PHP opcache functions to PHPWSGIInterface
   * add TimestampedCodeSource methods to FileCacheSource and MemoryCacheSource
+  * add support for python 3.10
   * move code from wsgi.utils to [Compiler|RegexParser].from_config
   * move load_config from main to seperate config submodule
   * move FileSource constructor logic to .from_path and .with_inferred_spec
